# Google-Jukebox

./: .gitignore  Copie de  Google Jukebox SET UP (1).docx  LOCAL_TESTING_GUIDE.md  SESSION_DEBUG_2026-02-18.md
fr-google-jukebox/: .env.example  .gitignore  CONFIG_MIGRATION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.local  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  main.tf  pyproject.toml  setup.cfg  start-local.sh
fr-google-jukebox/.cloudbuild/: cloudbuild.yaml
fr-google-jukebox/.github/workflows/: lint.yaml
fr-google-jukebox/app/: main.py  middleware.py
fr-google-jukebox/app/api/: deps.py  router.py
fr-google-jukebox/app/core/: cloud_logging.py  config.py  google_clients.py
fr-google-jukebox/app/core/google_apis/: drive.py  people.py
fr-google-jukebox/app/core/google_cloud/: cloud_storage.py
fr-google-jukebox/app/firestore/crud/: __init__.py  firestore.py
fr-google-jukebox/app/firestore/endpoints/: firestore_user.py
fr-google-jukebox/app/firestore/models/: base.py  user.py
fr-google-jukebox/app/music/: dependencies.py
fr-google-jukebox/app/music/endpoints/: default_settings.py  mail.py  music.py
fr-google-jukebox/app/music/models/: instrument.py  mail.py  music.py  music_setting.py  prompt.py
fr-google-jukebox/migrations/: env.py
fr-google-jukebox/migrations/versions/: 1eb8ef4fc04e_user_with_todo.py
fr-google-jukebox/pgdata_local/: postmaster.pid
fr-google-jukebox/pgdata_local/global/: 1262  2671  pg_control  pg_internal.init
fr-google-jukebox/pgdata_local/pg_stat/: db_0.stat  db_13445.stat  global.stat
fr-google-jukebox/pgdata_local/pg_stat_tmp/: db_0.stat  db_13445.stat  global.stat
fr-google-jukebox/scripts/: verify_config.py
jukebox/: .env.example  (+2 more)
(+47 files in other folders)
